<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_avaliar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_distance"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivSmile"
                android:layout_width="@dimen/icon_size_lists"
                android:layout_height="@dimen/icon_size_lists"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/notes_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_15"
                android:layout_toEndOf="@+id/ivSmile"
                android:layout_centerVertical="true"
                android:text="@string/avaliar"
                android:textSize="@dimen/default_text_size"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_toRightOf="@+id/ivSmile"/>

            <ImageView
                android:layout_width="@dimen/arrow_button_size"
                android:layout_height="@dimen/arrow_button_size"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right_arrow_icon"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorGrayLight" />

        <RelativeLayout
            android:id="@+id/rl_criar_avaliacao"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_distance"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivPartnership"
                android:layout_width="@dimen/icon_size_lists"
                android:layout_height="@dimen/icon_size_lists"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/call_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_15"
                android:layout_toEndOf="@+id/ivPartnership"
                android:layout_centerVertical="true"
                android:text="@string/criar_avaliacao"
                android:textSize="@dimen/default_text_size"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_toRightOf="@+id/ivPartnership"/>

            <ImageView
                android:layout_width="@dimen/arrow_button_size"
                android:layout_height="@dimen/arrow_button_size"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right_arrow_icon"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorGrayLight" />

        <RelativeLayout
            android:id="@+id/rl_alunos_avaliados"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_distance"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivIcone"
                android:layout_width="@dimen/icon_size_lists"
                android:layout_height="@dimen/icon_size_lists"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/call_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_15"
                android:layout_toEndOf="@+id/ivIcone"
                android:layout_centerVertical="true"
                android:text="@string/ver_alunos_avaliados"
                android:textSize="@dimen/default_text_size"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_toRightOf="@+id/ivIcone"/>

            <ImageView
                android:layout_width="@dimen/arrow_button_size"
                android:layout_height="@dimen/arrow_button_size"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right_arrow_icon"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>